--- a/src/app/admin/components/change-show/change-show.component.html
+++ b/src/app/admin/components/change-show/change-show.component.html
@@ -2,7 +2,7 @@
   <div fxLayout="row Wrap" fxLayoutGap="3%">
     <mat-form-field>
       <mat-select required [formControl]="selectTheater" placeholder="Select Theater">
-        <mat-option *ngFor="let theater of theaterList" [value]="theater">
+        <mat-option *ngFor="let theater of theaterList; trackBy: track" [value]="theater">
           {{theater.name}}
         </mat-option>
       </mat-select>
@@ -13,7 +13,7 @@
   </div>
   <h4 *ngIf="nowShowing.length > 0">Now Playing in {{selectedTheater.name}}</h4>
   <div *ngIf="nowShowing.length > 0" fxLayout="row" fxLayoutGap="3%">
-    <button mat-raised-button *ngFor="let movies of nowShowing">
+    <button mat-raised-button *ngFor="let movies of nowShowing; trackBy: track">
       {{movies}}
     </button>
   </div>
@@ -26,7 +26,7 @@
     </button>
   </div>
   <div fxLayout="row wrap" fxLayoutGap="3%" fxLayoutAlign="center center">
-    <mat-card *ngFor="let movie of movieResult" class="cardContent">
+    <mat-card *ngFor="let movie of movieResult; trackBy: track" class="cardContent">
       <div fxLayout="row">
         <mat-card-content>
           <button mat-button (click)="addMovie(movie)">
