--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -11,21 +11,21 @@
       <mat-form-field>
         <mat-label>Language</mat-label>
         <mat-select matNativeControl formControlName="lang">
-          <mat-option *ngFor="let language of languageList" value="{{language.value}}">{{language.name}}</mat-option>
+          <mat-option *ngFor="let language of languageList; trackBy: track" value="{{language.value}}">{{language.name}}</mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field>
         <mat-label>Genre</mat-label>
         <mat-select matNativeControl formControlName="generes">
-          <mat-option *ngFor="let genre of genresList" value="{{genre.id}}">{{genre.name}}</mat-option>
+          <mat-option *ngFor="let genre of genresList; trackBy: track" value="{{genre.id}}">{{genre.name}}</mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field>
         <mat-label>Theater</mat-label>
         <mat-select matNativeControl formControlName="theaters">
-          <mat-option *ngFor="let theater of theaterList" value="{{theater.name}}">{{theater.name}}</mat-option>
+          <mat-option *ngFor="let theater of theaterList; trackBy: track" value="{{theater.name}}">{{theater.name}}</mat-option>
         </mat-select>
       </mat-form-field>
     </form>
