--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,15 @@ body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   font-display: auto;
 }
+.error-color {
+  background-color: #f44336;
+  max-width: 100%!important;
+  width:100%!important;
+}
+  
+.success-color {
+  background-color: #82be0f;
+  max-width:100% !important;
+  width:100% !important;
+} 
+   
