--- a/src/app/features/search/components/s-dialog-cards/s-dialog-cards.component.html
+++ b/src/app/features/search/components/s-dialog-cards/s-dialog-cards.component.html
@@ -14,7 +14,7 @@
     fxLayoutAlign="center center"
     fxLayoutGap="10%"
   >
-    <div *ngFor="let movie of (movieObj.value | sortMovie: userPreference|sortName: movieSort | homeFilter: movieFilter:''|sortName: movieSort); trackBy: track" class="list">
+    <div *ngFor="let movie of (movieObj.value | sortMovie: userPreference | homeFilter: movieFilter:''); trackBy: track" class="list">
       <mat-card class="item">
         <div>
           <img
